--- a/at-prs/templates/data.html
+++ b/at-prs/templates/data.html
@@ -9,6 +9,5 @@
 -->
 
 {% extends 'base.html' %}
-
-{% block title %} HOME {% endblock %}
-{% block btn1 %} inactive {% endblock %}
+{% block title %} DATA {% endblock %}
+{% block btn2 %} inactive {% endblock %}
