--- a/at-prs/templates/about.html
+++ b/at-prs/templates/about.html
@@ -9,6 +9,5 @@
 -->
 
 {% extends 'base.html' %}
-
-{% block title %} HOME {% endblock %}
-{% block btn1 %} inactive {% endblock %}
+{% block title %} ABOUT {% endblock %}
+{% block btn3 %} inactive {% endblock %}
