--- a/at-prs/templates/login.html
+++ b/at-prs/templates/login.html
@@ -33,7 +33,7 @@
                 <div class="flash">{{ message }}</div>
                 {% endfor %}
             </div>
-            <input type="submit" value="Login">
+            <input class="btn" type="submit" value="Login">
         </form>
     </div>
 </body>
