--- a/at-prs/templates/base.html
+++ b/at-prs/templates/base.html
@@ -15,13 +15,15 @@
     <title>AT PRS - {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+    {% block link %}{% endblock %}
 </head>
 <body>
     <div class="display">
         <div class="wrapper">
                 <nav>
                     <a class="btn {% block btn1 %}{% endblock %}" href="/">Home</a>
-                    <a class="btn {% block btn2 %}{% endblock %}" href="data">Data</a>
+                    <a class="btn {% block btn2 %}{% endblock %}" href="data">Graph</a>
+                    {% if isadmin %} <a class="btn" href="admin">Admin</a> {% endif %}
                     <a class="btn {% block btn3 %}{% endblock %}" href="about">About</a>
 
                     <div class="right">
@@ -31,7 +33,7 @@
                 </nav>
 
                 <main>
-                    
+                    {% block main %}{% endblock %}
                 </main>
 
                 <footer>
