--- a/at-prs/templates/data.html
+++ b/at-prs/templates/data.html
@@ -9,5 +9,5 @@
 -->
 
 {% extends 'base.html' %}
-{% block title %} DATA {% endblock %}
+{% block title %} GRAPH {% endblock %}
 {% block btn2 %} inactive {% endblock %}
