--- a/at-prs/static/index.css
+++ b/at-prs/static/index.css
@@ -201,3 +201,18 @@ form input[type='submit']:hover {
     height: 100%;
     margin-bottom: 20px;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border-bottom: 1px solid rgb(138, 138, 138);
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: rgba(255, 255, 255, 0.11);
+}
