--- a/at-prs/static/main.css
+++ b/at-prs/static/main.css
@@ -16,9 +16,10 @@
 body, html {
     margin: 0;
     height: 100%;
-    background: url('back.jpg');
+    background: url('back.jpg') no-repeat;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6 {
