--- a/at-prs/templates/base.html
+++ b/at-prs/templates/base.html
@@ -15,6 +15,7 @@
     <title>AT PRS - {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+    <script src="{{ url_for('static', filename='jquery-3.7.0.min.js') }}"></script>
     {% block link %}{% endblock %}
 </head>
 <body>
