--- a/at-prs/static/index.css
+++ b/at-prs/static/index.css
@@ -164,7 +164,7 @@ form label {
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
     border-left: none;
-} 
+}
 
 .multiple-input input:hover {
     border: 1px solid rgb(218, 218, 218);
@@ -192,6 +192,18 @@ form input[type='submit']:hover {
     background-color: rgb(133, 133, 133);
     color: white;
     transition: all 300ms;
+}
+
+form select {
+    background-color: rgba(138, 138, 138, 0);
+    border: 1px solid rgb(163, 163, 163);
+    border-radius: 5px;
+    padding: 3px;
+    font-size: 14px;
+}
+
+form select:hover {
+    background-color: rgba(138, 138, 138, 0.479);
 }
 
 .db-data {
