--- a/at-prs/static/main.css
+++ b/at-prs/static/main.css
@@ -8,7 +8,7 @@
  * work.  If not, see <http://creativecommons.org/licenses/by-nc-sa/3.0/>.
  */
 
-* {
+ * {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
 }
@@ -74,6 +74,13 @@ main {
     background-color: #2d3646d5;
     backdrop-filter: blur(15px);
     border: 1px solid rgb(138, 138, 138);
+}
+
+.bordered {
+    border: 1px solid rgb(138, 138, 138);
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
 }
 
 footer {
