--- a/at-prs/templates/base.html
+++ b/at-prs/templates/base.html
@@ -39,7 +39,7 @@
 
                 <footer>
                     © AT PROJECT Limited, 2023
-                    <div class="left">CC BY-NC-SA-3</div>
+                    <div class="left">CC BY-NC-SA-3{% block footer %}{% endblock %}</div>
                 </footer>
         </div>
     </div>
