--- a/at-prs/templates/base.html
+++ b/at-prs/templates/base.html
@@ -12,6 +12,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AT PRS - {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
@@ -24,10 +25,10 @@
                 <nav>
                     <a class="btn {% block btn1 %}{% endblock %}" href="/">Home</a>
                     <a class="btn {% block btn2 %}{% endblock %}" href="data">Graph</a>
-                    {% if isadmin %} <a class="btn" href="admin">Admin</a> {% endif %}
+                    {% if isadmin %} <a class="btn {% block btn3 %}{% endblock %}" href="admin">Admin</a> {% endif %}
 
                     <div class="right">
-                        Logged in as <a class="user" href="user/{{ userid }}">{{ g.username }}</a>
+                        <span class="hid-565">Logged in as <a class="user" href="user/{{ userid }}">{{ g.username }}</a></span>
                         <a class="btn" href="logout">Logout</a>
                     </div>
                 </nav>
