--- a/at-prs/static/admin.css
+++ b/at-prs/static/admin.css
@@ -9,16 +9,44 @@
  */
 
 .control {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 10px;
-    padding: 10px;
-    width: calc(100%-20px);
-    border: 1px solid rgb(177, 177, 177);
-    border-radius: 10px;
+    width: 80%;
+    border: 1px solid rgb(138, 138, 138);
+    border-radius: 5px;
+}
+
+hr {
+    margin-bottom: 0;
+    width: 100%;
+    border: none;
+    border-top: 1px solid rgb(138, 138, 138);
 }
 
 .pages {
     padding: 14px;
     background-color: rgba(104, 23, 23, 0.062);
-    border-bottom: 1px solid rgb(177, 177, 177);
+    border-bottom: 1px solid rgb(138, 138, 138);
+}
+
+.d-flex {
+    align-items: center;
+}
+
+.multiple-input input {
+    width: 150px;
+}
+
+@media (max-width: 1180px) {
+    .wrapper {
+        width: 95% !important;
+    }
+}
+
+@media (max-width: 865px) {
+    label {
+        max-width: 130px !important;
+    }
 }
