--- a/at-prs/static/index.css
+++ b/at-prs/static/index.css
@@ -12,7 +12,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: 100%;
 }
 
@@ -26,7 +25,8 @@
 
 .user-card hr {
     margin: 0;
-    border-color: rgb(138, 138, 138);
+    border: none;
+    border-left: 1px solid rgb(138, 138, 138);
 }
 
 .user-card p {
@@ -91,53 +91,11 @@
     transform: translateY(-25%);
 }
 
-.add-info {
-    padding: 10px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.add-info .text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.add-info .label {
-    border: 1px solid rgb(138, 138, 138);
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-    border-bottom: none;
-    padding: 5px;
-    text-align: center;
-    width: 50%;
-    min-width: 200px;
-}
-
 .db-data {
     border: 1px solid rgb(138, 138, 138);
     border-radius: 5px;
     width: 90%;
-    height: 100%;
     margin-bottom: 20px;
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-td, th {
-    border-bottom: 1px solid rgb(138, 138, 138);
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: rgba(255, 255, 255, 0.11);
 }
 
 @media (max-width: 1100px) {
