--- a/at-prs/templates/index.html
+++ b/at-prs/templates/index.html
@@ -28,7 +28,7 @@
                 <img class="user-img" src="{{ url_for('static', filename='baseuser.jpg') }}">
                 {% endif %}
 
-                <p>{{ uinfo['first_name'] }} {{ uinfo['last_name'] }}</p>
+                <p>{{ uinfo['first_name'] }}<br>{{ uinfo['last_name'] }}</p>
 
                 <div class="last-info">
                     <div class="info-block">
