--- a/at-prs/static/base.css
+++ b/at-prs/static/base.css
@@ -197,6 +197,25 @@ tr:nth-child(even) {
     background-color: rgba(255, 255, 255, 0.11);
 }
 
+.alerts {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.flash {
+    margin: 10px;
+    padding: 10px;
+    width: 260px;
+    max-width: 260px;
+    min-height: 40px;
+    font-size: 16px;
+    font-weight: 600;
+    border: 1px solid rgb(138, 138, 138);
+    border-radius: 5px;
+    background-color: rgba(104, 15, 15, 0.719);
+}
+
 @media (max-width:890px) {
     .wrapper {
         width: 99%;
