--- a/at-prs/static/index.css
+++ b/at-prs/static/index.css
@@ -98,6 +98,12 @@
     margin-bottom: 20px;
 }
 
+p {
+    font-size: large;
+    font-weight: 500;
+    text-align: center;
+}
+
 @media (max-width: 1100px) {
     img {
         scale: 75%;
