--- a/at-prs/static/base.css
+++ b/at-prs/static/base.css
@@ -207,13 +207,30 @@ tr:nth-child(even) {
     margin: 10px;
     padding: 10px;
     width: 260px;
-    max-width: 260px;
-    min-height: 40px;
     font-size: 16px;
     font-weight: 600;
     border: 1px solid rgb(138, 138, 138);
     border-radius: 5px;
     background-color: rgba(104, 15, 15, 0.719);
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+
+.flash:hover {
+    background-color: rgba(124, 20, 20, 0.719);
+    transform: scale(1.03);
+    transition: all 300ms;
+}
+
+.line {
+    height: 1px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.528);
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    transform-origin: left center;
 }
 
 @media (max-width:890px) {
