--- a/at-prs/static/index.css
+++ b/at-prs/static/index.css
@@ -6,7 +6,7 @@
  * 
  * You should have received a copy of the license along with this
  * work.  If not, see <http://creativecommons.org/licenses/by-nc-sa/3.0/>.
- */
+**/
 
 .page {
     display: flex;
