--- a/at-prs/templates/base.html
+++ b/at-prs/templates/base.html
@@ -1,7 +1,7 @@
 <!--
- at-prs (c) by Vladislav 'ElCapitan' Nazarov
+ at-cnh (c) by Vladislav 'ElCapitan' Nazarov
  
- at-prs is licensed under a
+ at-cnh is licensed under a
  Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License.
  
  You should have received a copy of the license along with this
