--- a/at-prs/templates/base.html
+++ b/at-prs/templates/base.html
@@ -1,7 +1,7 @@
 <!--
- at-cnh (c) by Vladislav 'ElCapitan' Nazarov
+ xnx-cnh (c) by Vladislav 'ElCapitan' Nazarov
  
- at-cnh is licensed under a
+ xnx-cnh is licensed under a
  Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License.
  
  You should have received a copy of the license along with this
@@ -47,7 +47,7 @@
                 </main>
 
                 <footer>
-                    © AT PROJECT Limited, 2023
+                    © Vladislav 'ElCapitan' Nazarov; X_NOT_X PROJECT 2023
                     <div class="left">CC BY-NC-SA-3{% block footer %}{% endblock %}</div>
                 </footer>
         </div>
