--- a/xnxcnh/templates/admin.html
+++ b/xnxcnh/templates/admin.html
@@ -9,6 +9,7 @@
 -->
 
 {% extends 'base.html' %}
+{% block title %} ADMIN {% endblock %}
 {% block btn3 %} inactive {% endblock %}
 {% block link %} <link rel="stylesheet" href="{{ url_for('static', filename='admin.css') }}"> {% endblock %}
 
